fix: overflow search input

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -124,7 +124,7 @@ h5 {
     display: inline-flex;
 }
 #music-search input {
-    width: 240px;
+    width: 200px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
